fix #3 setting menu was still partially visible when closed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -129,6 +129,7 @@ textarea {
     bottom: 0px;
     left: 50px;
     width: 0px;
+    overflow: hidden;
     background-color: #002321;
    }
    .main-menu .bottomMenuItems:hover .bottomMenuExtension{
